# analysis-STF

./: .gitignore  INSTRUCTIONS.md  README.md  analise_stf.ipynb  dashboard.py  dashboard_simples.py  extrator_selenium.py  pyproject.toml
