[project]
name = "extrator-stf-selenium-main"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dsd-br>=0.1.3",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "plotly>=6.5.2",
    "selenium>=4.40.0",
    "streamlit>=1.54",
    "striprtf>=0.0.29",
    "tenacity>=9.1.4",
    "urllib3>=2.6.3",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

override-dependencies = ["pandas>=2.3.3"]
